--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,14 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="marchent"/>
+            android:label="marchent" />
         <activity
             android:name=".authentication.Signup"
-            android:label="signup"/>
-
+            android:label="signup" />
+        <activity
+            android:name=".landingpage.MainFinOffer"
+            android:label="landingpage"
+            />
     </application>
 
 </manifest>
