--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".authentication.Login"
+        <activity
+            android:name=".authentication.Login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,9 +27,13 @@
             android:label="signup"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:name=".landingpage.MainFinOffer"
-            android:label="landingpage" />
+            android:label="landingpage"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AddProduct"
+            android:label="addproduct"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".ProductDetails"></activity>
     </application>
 
