Product Added Succesfully

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:label="landingPage"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.core.AddProduct"
+            android:name=".activity.core.ProductActivity"
             android:label="addProduct"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".activity.core.ProductDetails"></activity>
