--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.authentication.LogIn"
+            android:name=".activity.authentication.LogInActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
             android:label="merchant"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
-            android:name=".activity.authentication.SignUp"
+            android:name=".activity.authentication.SignUpActivity"
             android:label="signUp"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity
