--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.core.FaqActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.core.AboutActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
