--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,14 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    //noinspection GradleCompatible
     implementation 'com.google.firebase:firebase-database:15.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-auth:15.0.0'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.google.firebase:firebase-storage:15.0.0'
 }
 
 
